Correct tests now that consignmentItems are mandatory
Signed-off-by: Niels Thykier <nt@asseco.dk>